# koala_chess

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pipeline.yml  rust.yml
gl/: Cargo.toml  build.rs
glx/: Cargo.toml  build.rs
glx/src/: lib.rs
koala_chess/: Cargo.toml
koala_chess/src/: bitmap.rs  board.rs  game.rs  input.rs  main.rs  mat4.rs  piece.rs  player.rs  projections.rs  shader.rs  traits.rs  transformations.rs  vec3.rs  vec4.rs
koala_chess/src/platform/: mod.rs  unix.rs  windows.rs
koala_chess/src/renderer/: mod.rs  open_gl.rs
logger/: Cargo.toml
logger/src/: lib.rs  log_level.rs
shaders/: atlas.frag  atlas.vert  fragment.frag  vertex.vert
src/: main.rs
textures/: README.md  chessboard.pdn  chessboard_readme.txt  project.pdn  readme.txt
wgl/: Cargo.toml  build.rs
