[package]
name = "koala_chess"
version = "0.1.0"
authors = ["Oliver Piorun <Oliver.Piorun@ruhr-uni-bochum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "windef", "minwindef", "wingdi", "impl-default"] }