[package]
name = "koala_chess"
version = "0.1.0"
authors = ["Oliver Piorun <Oliver.Piorun@ruhr-uni-bochum.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "../gl" }
logger = { path = "../logger" }

[target.'cfg(windows)'.dependencies]
wgl = { path = "../wgl" }
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "profileapi", "impl-default"] }

[target.'cfg(unix)'.dependencies]
glx = { path = "../glx" }
x11 = { version = "2.18.2", features = ["xlib"] }