[package]
name = "logger"
version = "0.1.0"
authors = ["Oliver Piorun <Oliver.Piorun@ruhr-uni-bochum.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.5", features = ["macros", "formatting", "local-offset"] }